# IDBI-Fin

./: .env.example  .gitignore  README.md  bill_sample.txt  render.yaml  ruff.toml  start.bat
.github/workflows/: ci.yml
backend/: _bill_test.py  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  ocr.py  orchestrator.py  persistence.py  schemas.py  scoring_service.py  tasks.py
backend/app/connectors/: __init__.py  base.py  synth.py
backend/app/routers/: alerts_router.py  auth_router.py  bill_router.py  consent_router.py  ocen_router.py  score_router.py
backend/model_artifacts/: evaluation_report.json  model_metadata.json  selected_features.json  woe_scorecard_points.json  xgb_model.json
backend/tests/: test_api.py
data/: DATA_DICTIONARY.md  DATA_PROVENANCE.md
docs/: Problem Statement.md  README.md  RUNBOOK.md  architecture.md  information.md  tech.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertFeed.tsx  BorrowerDrilldown.tsx  ElectricityUpload.tsx  HealthCardView.tsx  LandingPage.tsx  Layout.tsx  Login.tsx  Signup.tsx  (+3 more)
ml/: pyproject.toml  requirements.txt
ml/msme_ml/: __init__.py  compose.py  config.py  evaluate.py  explain.py  features.py  generate.py  raw_payloads.py  real_proxy.py  schema.py  scorecard.py  scoring.py  selection.py  train.py
ml/tests/: test_compose.py  test_generate_features.py  test_scoring.py
ml/tools/: gen_data_dictionary.py
(+7 files in other folders)
