[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "msme-ml"
version = "0.1.0"
description = "MSME Financial Health Card — ML package (data generation, training, SHAP, WOE, scoring)"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    "xgboost==2.0.3",
    "pyarrow==15.0.2",
    "joblib==1.4.2",
    "shap==0.45.1",
]

[project.optional-dependencies]
train = ["optbinning==0.19.0", "ortools==9.8.3296", "protobuf==4.25.3", "mlflow==2.13.0",
         "great-expectations==0.18.15", "fairlearn==0.10.0", "lifelines==0.28.0",
         "matplotlib==3.8.4"]
dev = ["pytest==8.2.2", "ruff==0.4.9"]

[tool.setuptools]
packages = ["msme_ml"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
